Another big commit ...

--- a/_posts/2010-01-16-to-keep-2010-01-15.md
+++ b/_posts/2010-01-16-to-keep-2010-01-15.md
@@ -5,6 +5,6 @@ title: To keep - 2010-01-15
 
 **To keep 2010/01/15**
 
-Video about robotic: [http://www.silicon.com/technology/hardware/2010/01/13/video-artificial-intelligence-noel-sharkey-on-the-inexorable-rise-of-robots-39745322/](http://www.silicon.com/technology/hardware/2010/01/13/video-artificial-intelligence-noel-sharkey-on-the-inexorable-rise-of-robots-39745322/)
+Video about robotic: <http://www.silicon.com/technology/hardware/2010/01/13/video-artificial-intelligence-noel-sharkey-on-the-inexorable-rise-of-robots-39745322/>
 
-Good podcast about cosmology: [http://www.symmetrymagazine.org/breaking/2010/01/15/easy-listening-and-learning-with-deep-science-podcasts/](http://www.symmetrymagazine.org/breaking/2010/01/15/easy-listening-and-learning-with-deep-science-podcasts/)
+Good podcast about cosmology: <http://www.symmetrymagazine.org/breaking/2010/01/15/easy-listening-and-learning-with-deep-science-podcasts/>
