--- a/_posts/2010-11-15-a-new-way.md
+++ b/_posts/2010-11-15-a-new-way.md
@@ -3,7 +3,7 @@ layout: post
 title: A new way!
 ---
 
-<img src="/post/a-new-way/media/sketch.png" style="float: right;" />
+<img src="/img/a-new-way/sketch.png" style="float: right;" />
 Alright! I finally made the jump! **The CouchDB way**!
 
 This blog is now running with:
