And another one. Finally closing the posts fixing.

--- a/_posts/2007-07-06-back-online-2007.md
+++ b/_posts/2007-07-06-back-online-2007.md
@@ -9,8 +9,8 @@ I made some pictures :) [enjoy](http://flickr.com/photos/57244393@N00/sets/72157
 
 Here some pictures :
 
-[![Frozen Stream](http://farm1.static.flickr.com/187/392044223_c299d71cb0_s.jpg) "Frozen Stream"](http://farm1.static.flickr.com/187/392044223_c299d71cb0.jpg)
-[![Frozen pond of the park](http://farm1.static.flickr.com/172/392043810_c8312d74e9_s.jpg) "Frozen pond of the park"](http://farm1.static.flickr.com/172/392043810_c8312d74e9.jpg)
-[![What a mess at New York](http://farm1.static.flickr.com/167/392043594_413da42d32_s.jpg) "What a mess at New York"](http://farm1.static.flickr.com/167/392043594_413da42d32.jpg)
+[![Frozen Stream](http://farm1.static.flickr.com/187/392044223_c299d71cb0_s.jpg)](http://farm1.static.flickr.com/187/392044223_c299d71cb0.jpg)
+[![Frozen pond of the park](http://farm1.static.flickr.com/172/392043810_c8312d74e9_s.jpg)](http://farm1.static.flickr.com/172/392043810_c8312d74e9.jpg)
+[![What a mess at New York](http://farm1.static.flickr.com/167/392043594_413da42d32_s.jpg)](http://farm1.static.flickr.com/167/392043594_413da42d32.jpg)
 
-**Update**: 2007-07-23: eheh sometimes I look at those pictures to remind me the coldness when it’s 80-90F (~25-30C).
+> **Update**: 2007-07-23: eheh sometimes I look at those pictures to remind me the coldness when it’s 80-90F (~25-30C).
