--- a/_posts/2008-08-29-old-posts.md
+++ b/_posts/2008-08-29-old-posts.md
@@ -9,4 +9,4 @@ I can't find my first web page hosted by my university. Archive.org didn't exist
 
 It's pretty good to see the tag cloud getting shaped the way it is.
 
-<blockquote>Ainsi va la vie ;)</blockquote>
+> Ainsi va la vie ;)
