--- a/_posts/2009-06-21-eee-pc-1000he.md
+++ b/_posts/2009-06-21-eee-pc-1000he.md
@@ -3,7 +3,7 @@ layout: post
 title: Eee pc 1000HE
 ---
 
-<a href="/post/eee-pc-1000he/media/eee-pc-ubuntu1.png"><img src="/post/eee-pc-1000he/media/eee-pc-ubuntu1.png" width="320" height="200" /></a>
+<a href="/img/eee-pc-1000he/eee-pc-ubuntu1.png"><img src="/img/eee-pc-1000he/eee-pc-ubuntu1.png" width="320" height="200" style="float: left; margin-right: 5px;" /></a>
 I recently bought a netbook: Eee PC 1000HE, and so far I'm extremely happy with it.
 
 I was searching a small device not too heavy (I have enough of breaking my shoulders with the laptop in the bag...) powerful enough to sustain development tasks (erlang, java, eclipse) and in some extent to support video playing (for encoding I can use something else obviously).
@@ -14,7 +14,7 @@ Well, I'm sorry to say but you were dead wrong dear friends. So far, this device
 
 First of all, it's pre-installed with Windows XP which surprised me to not use every bit of memory I have (1G). Nonetheless I installed immediately an Ubuntu Linux next to it (better to have 2 systems up and running).
 
-<a href="/post/eee-pc-1000he/media/eclipse-eee-pc.png"><img src="/post/eee-pc-1000he/media/eclipse-eee-pc.png" width="320" height="200" style="float: right;" /></a>
+<a href="/img/eee-pc-1000he/eclipse-eee-pc.png"><img src="/img/eee-pc-1000he/eclipse-eee-pc.png" width="320" height="200" style="float: right; margin-left: 5px;" /></a>
 Once Ubuntu installed (the 9.04 version) surprise again to see all the goodies such as extra graphics effects or goofy animations working and not one frame every 5s.
 
 I continued by installing java, eclipse, erlang and was delighted to see eclipse running without problems. Of course, the application is slower than you could imagine, but it's not like the last comment I got: "Oh it will be so slow, it will be unusable"...
